we can now install package and ts4script files Added run config